BUG-111481 Code quaility improvements and notifications on maintenance mode enable/disable